--- a/Agregat/cuve.html
+++ b/Agregat/cuve.html
@@ -121,7 +121,7 @@
             <div class="xzoom-container">
                 <div class="xzoom-thumbs">
                   <a href="../cuve.jpg">
-                    <img class="xzoo-gallery"  height="380"  src="../assets/img/Locaaabati/pro.jpg" xpreview="../cuve.jpg">
+                    <img class="xzoo-gallery"  width="280" height="380" src="../assets/img/Locaaabati/pro.jpg" xpreview="../cuve.jpg">
                   </a>
                 </div>
               </div>
