--- a/Pesee-Sechage/cam.html
+++ b/Pesee-Sechage/cam.html
@@ -294,8 +294,9 @@
   </footer>
   <!-- End Footer -->
 
-  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
+  <a href="#" class="back-to-top">
+    <img src="../assets/img/scrl.jpg" alt="Retour en haut"  width="40px" >
   <script src="../assets/vendor/jquery/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
