--- a/Routes/feto.html
+++ b/Routes/feto.html
@@ -121,7 +121,7 @@
             <div class="xzoom-container">
                 <div class="xzoom-thumbs">
                   <a href="../cuve.jpg">
-                    <img class="xzoo-gallery" width="380" height="380" src="../assets/img/Locaaabati/orange.webp" xpreview="../cuve.jpg" style="margin-right: 3cm;">
+                    <img class="xzoo-gallery" width="280" height="380" src="../assets/img/Locaaabati/orange.webp" xpreview="../cuve.jpg" style="margin-right: 3cm;">
                   </a>
                 </div>
               </div>
@@ -256,8 +256,8 @@
     </div>
   </footer>
   <!-- End Footer -->
-
-  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+  <a href="#" class="back-to-top">
+    <img src="../assets/img/scrl.jpg" alt="Retour en haut"  width="40px">
   <script src="../assets/vendor/jquery/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js" ></script>
   <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
