--- a/Routes/poste.html
+++ b/Routes/poste.html
@@ -122,7 +122,7 @@
             <div class="xzoom-container">
                 <div class="xzoom-thumbs">
                   <a href="../cuve.jpg">
-                    <img class="xzoo-gallery" width="380" height="380" src="../assets/img/Locaaabati/zag.webp" xpreview="../cuve.jpg" style="margin-right: 3cm;">
+                    <img class="xzoo-gallery" width="280" height="380" src="../assets/img/Locaaabati/zag.webp" xpreview="../cuve.jpg" style="margin-right: 3cm;">
                   </a>
                 </div>
               </div>
@@ -264,7 +264,7 @@
   </footer>
   <!-- End Footer -->
   <a href="#" class="back-to-top">
-    <img src="../assets/img/scrl.jpg" alt="Retour en haut"  width="40px" style="margin-right: 10cm;">
+    <img src="../assets/img/scrl.jpg" alt="Retour en haut"  width="40px">
   </a>
   <script src="../assets/vendor/jquery/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js" ></script>
